--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -749,6 +749,11 @@ h1 {
   font-size: 1.5rem;
   font-weight: bold;
 }
+h4 {
+  font-size: 1.5rem;
+  font-weight: 400;
+  text-transform: capitalize;
+}
 .project-index h3 {
   font-size: 1.25rem;
   line-height: 1.2;
