--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -677,8 +677,8 @@ pre tt:after {
 
 /* Global overrides */
 body {
-  background: rgb(251,249,249)
-}
+/*  background: rgb(251,249,249)
+*/}
 a { color: inherit; }
 h1 a,
 .metadata a,
